table with active orders